# esp32c3-clock

./: .gitignore  Cargo.toml  build.rs  config.json  convert.py  partations.csv  readme.md  sdkconfig.defaults
.cargo/: config.toml
src/: button.rs  main.rs
src/display/: backend.rs  clock.rs  mod.rs  ui.rs
src/display/st7735r/: mod.rs
src/fs/: config.rs  mod.rs
src/net/: mod.rs  ntp.rs
src/utils/: mod.rs  state.rs
ui/: main.slint
ui/image/: icon.raw
