[package]
name = "esp32c3-clock"
version = "0.1.0"
authors = ["wszxlsun <wszxlsun@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"
strip = true
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false, features = ["std", "alloc"] }
esp-idf-hal = { version = "0.43.1", default-features = false, features = ["std", "alloc"] }
embedded-graphics = { version = "0.8.1" }
chrono = { version = "0.4.39", default-features = false, features = ["libc", "clock"] }
anyhow = "1.0.95"
embedded-svc = "0.27.1"
embedded-hal = "1.0.0"
embedded-graphics-core = { version = "0.4" }
byteorder = "1.5.0"
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
slint = { version = "1.9.2", default-features = false, features = ["compat-1-2", "renderer-software", "unsafe-single-threaded", "libm"] }
button-driver = { version = "0.1.4", features = ["std", "esp"] }

[build-dependencies]
embuild = "0.31.3"
anyhow = "1.0.95"
slint-build = "1.9.2"
